@@ -337,7 +337,6 @@ public class PlaylistWindow : Window
 		icon.play_pause_menu_item.Activated += new EventHandler (HandlePlayPauseCommand);
 		icon.previous_song_menu_item.Activated += new EventHandler (HandlePreviousCommand);
 		icon.next_song_menu_item.Activated += new EventHandler (HandleNextCommand);
-		icon.information_menu_item.Activated += new EventHandler (HandleInformationCommand);
 		icon.play_song_menu_item.Activated += new EventHandler (HandleAddSongCommand);
 		icon.play_album_menu_item.Activated += new EventHandler (HandleAddAlbumCommand);
 		icon.show_window_menu_item.Activated += new EventHandler (HandleToggleWindowVisibilityCommand);
@@ -570,7 +569,6 @@ public class PlaylistWindow : Window
 		skip_forward_menu_item.Sensitive = has_first;
 
 		information_menu_item.Sensitive = has_first;
-		icon.information_menu_item.Sensitive = has_first;
 
 		UpdateTimeLabels (player.Position);
 
@@ -1096,6 +1094,7 @@ public class PlaylistWindow : Window
 
 	private void HandleInformationCommand (object o, EventArgs args)
 	{
+		//FIXME deal with selection
 		Song song = Song.FromHandle (playlist.Playing);
 
 		if (song.Album.Length == 0)
